aws/ingress.yaml
# -----Use for AWS
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: aws-ingress
#   #namespace: argocd
#   annotations:
#     kubernetes.io/ingress.class: alb
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: ip
# spec:
#   ingressClassName: alb
#   rules:
#     - http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: frontend
#                 port:
#                   number: 80
#           - path: /ai-images
#             pathType: Prefix
#             backend:
#               service:
#                 name: ai-images
#                 port:
#                   number: 8111
#           - path: /api
#             pathType: Prefix
#             backend:
#               service:
#                 name: backend
#                 port:
#                   number: 8080

# -----Use for Azure
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: azure-ingress
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/rewrite-target: /
#     nginx.ingress.kubernetes.io/use-regex: "true"
# spec:
#   ingressClassName: nginx
#   rules:
#     - http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: frontend
#                 port:
#                   number: 80
#           - path: /ai-images
#             pathType: Prefix
#             backend:
#               service:
#                 name: ai-images
#                 port:
#                   number: 8111
#           - path: /api
#             pathType: Prefix
#             backend:
#               service:
#                 name: backend
#                 port:
#                   number: 8080
# -----Use for Azure 2

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: azure-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
# spec:
#   ingressClassName: nginx
#   rules:
#     - http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: frontend
#                 port:
#                   number: 80
#           - path: /ai-images
#             pathType: Prefix
#             backend:
#               service:
#                 name: ai-images
#                 port:
#                   number: 8111
#           - path: /api
#             pathType: Prefix
#             backend:
#               service:
#                 name: backend
#                 port:
#                   number: 8080

# -----Use for Azure 3 with rabbitmq

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azure-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /ai-images
            pathType: Prefix
            backend:
              service:
                name: ai-images
                port:
                  number: 8111
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /friend-recommender
            pathType: Prefix
            backend:
              service:
                name: friend-recommender
                port:
                  number: 5000
          # - path: /rabbitmq
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: rabbitmq
          #       port:
          #         number: 15672
